# WeiboTopic

./: .gitignore  intergrate_script.py
DataProcess/: .gitignore  CMakeLists.txt  makefile.sh  myMakeFile  readme.txt
DataProcess/.metadata/: version.ini
DataProcess/.metadata/.plugins/org.eclipse.cdt.core/: VirtualProject.language.settings.xml
DataProcess/.metadata/.plugins/org.eclipse.core.resources/: .snap
DataProcess/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
DataProcess/lib/Data/: UserDict.pdat  UserDict.pos
DataProcess/lib/mysql/: my_sys.h  mysql_version.h
DataProcess/lib/src/: Configure.xml  Makefile.bak  process.cpp
DataProcess/src/: CMakeLists.txt  ClassificationInfo.h  Cluster.cpp  Cluster.h  CooccurrenceWord.h  DBdao.cpp  DBdao.h  DBoperation.cpp  DBoperation.h  DEBUG.cpp  DEBUG.h  GetTopic.cpp  GetTopic.h  IsPolitic.cpp  IsPolitic.h  IsPolitics.cpp  IsPolitics.h  OneWeibo.h  README  TestModel.h  Topic.h  TopicView.cpp  TopicView.h  TopicViewAndPolitics.cpp  TopicViewAndPolitics.h  TopicWord.h  TrainModel.cpp  TrainModel.h  View.h  VirtualProjectMain.cpp  VirtualProjectMain_TrainAndTestBayes.cpp  VirtualProjectMain_bayestrain.cpp  VirtualProjectMain_droptable.cpp  VirtualProjectMain_querytable.cpp  Weibo.h  WeiboWord.h  bayestrain.cpp  connection_pool.cpp  coverage.cpp  coverage.h  (+3 more)
DataProcess/src/bayes/: CMakeLists.txt  TestModel.cpp  TrainModel.cpp  TrainModel.h
DataProcess/src/coverage/: CMakeLists.txt  Textspilt.cpp  Textspilt.h  coverage.cpp  coverage.h  parser.cpp  parser.h  simhash.h
DataProcess/src/dbdao/: CMakeLists.txt  DBoperation.cpp  DBoperation.h  TimeTool.h
DataProcess/src/gen_feature/: CMakeLists.txt  GetTopic.cpp  GetTopic.h
DataProcess/src/politic_topics/: CMakeLists.txt  IsPolitic.cpp  IsPolitic.h  IsPolitics.cpp
DataProcess/src/singlepass/: CMakeLists.txt  Cluster.cpp
DataProcess/src/test/: CMakeLists.txt  DEBUG.cpp  DEBUG.h
DataProcess/src/topic_summary/: CMakeLists.txt  TopicView.h  TopicViewAndPolitics.cpp  TopicViewAndPolitics.h
DataProcess/src/utils/: CMakeLists.txt  ClassificationInfo.h  OneWeibo.h  ReadDirTool.h  Tool.h  TopicSimhash.cpp  TopicSimhash.h  Weibo.h  WeiboWord.h
weibo_ad_filter/: .gitignore  CMakeLists.txt
weibo_ad_filter/lib/Data/: UserDict.map  UserDict.pdat  UserDict.pos
weibo_ad_filter/lib/data_split/: baduser.txt  calculate_average_spam_rate.sh  drop_undone_table.sh  ref_count.sh  start.sh  stop.sh  stopwords.txt  userdict.txt
weibo_ad_filter/src/: CMakeLists.txt  main.cpp  preprocessor.h  process.cpp  process.h  run_bayes_pool.cpp  run_filter.cpp  run_ref_bayes.cpp  run_ref_count.cpp  run_ref_user.cpp  run_ref_zombie.cpp  tactic.cpp  tactic.h
weibo_ad_filter/src/DB/: CMakeLists.txt  DBoperation.cpp  DBoperation.h  model.cpp  model.h
weibo_ad_filter/src/allocator/: CMakeLists.txt  allocator.cpp  allocator.h
weibo_ad_filter/src/bayes/: CMakeLists.txt  bayes_classifier.h  bayes_factory.h  bayes_pool.cpp  bayes_pool.h  keyword.h
weibo_ad_filter/src/database/: mysql_handler.cc  mysql_handler.h
weibo_ad_filter/src/db/: CMakeLists.txt  DBoperation.cpp  DBoperation.h  DBpool.cpp  connection_pool.cpp  connection_pool.h  model.cpp  model.h  parsedblog.cpp  parsedblog.h
weibo_ad_filter/src/fuzzy/: fuzzy.h
weibo_ad_filter/src/logger/: CMakeLists.txt  log.cpp  log.h  logger.cpp  logger.h
weibo_ad_filter/src/persistence/: persistence.cpp  persistence.h
weibo_ad_filter/src/ref_count/: CMakeLists.txt  ref.h
weibo_ad_filter/src/simhash/: CMakeLists.txt  simhash.cpp  simhash.h
weibo_ad_filter/src/split/: CMakeLists.txt  Textspilt.cpp  Textspilt.h  parser.cpp  parser.h
weibo_ad_filter/src/tactic/: CMakeLists.txt  preprocessor.cpp  preprocessor.h  tactic.cpp  tactic.h
weibo_ad_filter/test/test_allocator/: CMakeLists.txt  test_allocator.cpp
weibo_ad_filter/test/test_db/: CMakeLists.txt  test_db.cpp
weibo_ad_filter/test/test_example/: test_example.cc
weibo_ad_filter/test/test_log/: CMakeLists.txt  test_log.cpp
weibo_ad_filter/test/test_mysql_conn/: test_mysql.cc
weibo_ad_filter/test/test_parser/: CMakeLists.txt  test_parser.cpp
weibo_ad_filter/test/test_simhash/: CMakeLists.txt  test_simhash.cpp
weibo_ad_filter/test/test_tactic/: CMakeLists.txt  test_tactic.cpp
weibo_analyse/: CMakeLists.txt
weibo_analyse/deploy_scripts/: setup_env.sh
weibo_analyse/src/: CMakeLists.txt  preprocessor.h  process.cpp  process.h  tactic.cpp  tactic.h
weibo_analyse/src/DB/: DBoperation.cpp  DBpool.cpp  connection_pool.cpp  connection_pool.h  model.h
weibo_analyse/src/split/: CMakeLists.txt  Textspilt.cpp  parser.cpp  parser.h
weibo_analyse/src/weibo_datamoving/: CMakeLists.txt  parser.cpp  parser.h  preprocessor.cpp  process.cpp
weibo_analyse/src/weibo_datamoving/DB/: CMakeLists.txt  DBoperation.cpp  DBoperation.h  DBpool.cpp  DBpool.h  (+3 more)
weibo_datamoving/: CMakeLists.txt
weibo_datamoving/src/: process.cpp
weibo_datamoving/src/DB/: DBpool.cpp  DBpool.h
weibo_datamoving/src/example/: simple_calculator.cc  simple_calculator.h
weibo_datamoving/src/split/: Textspilt.cpp
weibo_models/: CMakeLists.txt
weibo_models/lib/libcppjieba/: demo  demo.cpp
weibo_models/src/: experiment.cc  interface.cc  main.cc
weibo_models/src/data_mining/: CMakeLists.txt  cluster_related.cc  cluster_related.h  interface.h  item.cc  item.h  item_related.cc  item_related.h  utils-inl.h  utils.cc  utils.h
weibo_models/src/database/: CMakeLists.txt  mysql_handler.cc  mysql_handler.h
weibo_models/src/utils/: CMakeLists.txt  calculator-inl.h  calculator.cc  calculator.h  dimension_reducer-inl.h  dimension_reducer.cc  dimension_reducer.h  text_cleaner.cc  text_cleaner.h
weibo_models/test/test_cppjieba/: CMakeLists.txt  demo.cc
weibo_models/test/test_data_mining/: CMakeLists.txt  test_cluster.cc  test_fixture.h  test_item.cc  test_itemset.cc  test_math.cc
weibo_models/test/test_example/: CMakeLists.txt
weibo_models/test/test_mysql_conn/: CMakeLists.txt  test_mysql.cc
weibo_models/test/test_utils/: CMakeLists.txt  test_dimension_reducer.cc  test_math.cc  test_text_cleaner.cc
(+184 files in other folders)
