set(classificationinfo_src ClassificationInfo.h ClassificationInfo.cpp)
set(cooccurrenceword_src CooccurrenceWord.h CooccurrenceWord.cpp)
set(oneweibo_src OneWeibo.h OneWeibo.cpp)
set(topic_src Topic.h Topic.cpp)
set(view_src View.h View.cpp)
set(topicword_src TopicWord.h TopicWord.cpp)
set(weibo_src Weibo.h Weibo.cpp)
set(weiboword_src  WeiboWord.h WeiboWord.cpp)
set(topicsimhash_src TopicSimhash.h TopicSimhash.cpp)
add_library(classificationinfo_uril ${classificationinfo_src})
add_library(cooccurrenceword_util ${cooccurrenceword_src})
add_library(oneweibo_util ${oneweibo_src})
add_library(topic_util ${topic_src})
add_library(view_util ${view_src})
add_library(topicword_util ${topicword_src})
add_library(weibo_util ${weibo_src})
add_library(weiboword_util ${weiboword_src})
add_library(topicsimhash_util ${topicsimhash_src})
target_link_libraries(topicsimhash_util simhash_lib)
target_link_libraries(topic_util classificationinfo_uril cooccurrenceword_util  oneweibo_util
	    topicword_util weibo_util weiboword_util topicsimhash_util)
